--- a/README.textile
+++ b/README.textile
@@ -55,6 +55,11 @@ h4. SomaCoreGC (flash player debugger needed)
 * "Garbage Collection monitor demo with the SomaCoreDebugger":http://www.soundstep.com/blog/source/somacore/demo/Flash/SomaCoreGC/
 * "View Source":http://www.soundstep.com/blog/source/somacore/demo/Flash/SomaCoreGC/srcview
 
+h4. SomaCore Twitter Search
+
+* "Pure AS3 Twitter Search":http://www.soundstep.com/blog/source/somacore/demo/Flash/SomaCoreTwitterSearch/
+* "View Source":http://www.soundstep.com/blog/source/somacore/demo/Flash/SomaCoreTwitterSearch/srcview/
+
 h2. License
 
 The contents of this file are subject to the Mozilla Public License
