--- a/README.textile
+++ b/README.textile
@@ -35,30 +35,50 @@ h3. Demos
 
 * "Repository of the demos":http://github.com/soundstep/somacore_demos
 
+h4. SomaCore Hello World (injection enabled)
+
+* "Simple Application that shows a message":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreHelloWorld-Injection/
+* "View Source":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreHelloWorld-Injection/srcview/
+
 h4. SomaCore Hello World
 
-* "Simple Application that shows a message":http://www.soundstep.com/blog/source/somacore/demo/Flash/SomaCoreHelloWorld/
-* "View Source":http://www.soundstep.com/blog/source/somacore/demo/Flash/SomaCoreHelloWorld/srcview/
+* "Simple Application that shows a message":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreHelloWorld/
+* "View Source":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreHelloWorld/srcview/
+
+h4. SomaColor (Injection enabled)
+
+* "Pure AS3 demo":http://www.soundstep.com/blog/source/somacore/demos/SomaColor-Injection/
+* "View Source":http://www.soundstep.com/blog/source/somacore/demos/SomaColor-Injection/srcview
 
 h4. SomaColor
 
-* "Pure AS3 demo":http://www.soundstep.com/blog/source/somacore/demo/Flash/SomaColor/
-* "View Source":http://www.soundstep.com/blog/source/somacore/demo/Flash/SomaColor/srcview
+* "Pure AS3 demo":http://www.soundstep.com/blog/source/somacore/demos/SomaColor/
+* "View Source":http://www.soundstep.com/blog/source/somacore/demos/SomaColor/srcview
 
-h4. SomaCafeTownSend
+h4. SomaCoreCafeTownSend (Injection enabled)
 
-* "Flash Builder / Flex demo":http://www.soundstep.com/blog/source/somacore/demo/Flex/CafeTownSend/
-* "View Source":http://www.soundstep.com/blog/source/somacore/demo/Flex/CafeTownSend/srcview
+* "Flash Builder / Flex demo":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreCafeTownSend-Injection/
+* "View Source":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreCafeTownSend-Injection/srcview
 
-h4. SomaCoreGC (flash player debugger needed)
+h4. SomaCoreCafeTownSend
 
-* "Garbage Collection monitor demo with the SomaCoreDebugger":http://www.soundstep.com/blog/source/somacore/demo/Flash/SomaCoreGC/
-* "View Source":http://www.soundstep.com/blog/source/somacore/demo/Flash/SomaCoreGC/srcview
+* "Flash Builder / Flex demo":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreCafeTownSend/
+* "View Source":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreCafeTownSend/srcview
+
+h4. SomaCore Twitter Search (injection enabled)
+
+* "Pure AS3 Twitter Search":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreTwitterSearch-Injection/
+* "View Source":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreTwitterSearch-Injection/srcview/
 
 h4. SomaCore Twitter Search
 
-* "Pure AS3 Twitter Search":http://www.soundstep.com/blog/source/somacore/demo/Flash/SomaCoreTwitterSearch/
-* "View Source":http://www.soundstep.com/blog/source/somacore/demo/Flash/SomaCoreTwitterSearch/srcview/
+* "Pure AS3 Twitter Search":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreTwitterSearch/
+* "View Source":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreTwitterSearch/srcview/
+
+h4. SomaCoreGC (flash player debugger needed)
+
+* "Garbage Collection monitor demo with the SomaCoreDebugger":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreGC/
+* "View Source":http://www.soundstep.com/blog/source/somacore/demos/SomaCoreGC/srcview
 
 h2. License
 
